# swa

./: Cargo.toml  LICENSE  README.md  demo-website.html
src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
ui/: app.js  index.html  login.html  login.js  style.css  tracker.js
